# whisperbox-transcribe

./: .editorconfig  .env.dev  .env.example  .env.test  .flake8  .gitignore  Makefile  README.md  alembic.ini  dev.Dockerfile  dev.docker-compose.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  pyproject.toml  web.Dockerfile  worker.Dockerfile  worker.gpu.Dockerfile
.github/: renovate.json
.github/workflows/: ci.yml
app/: config.py  main.py  security.py  start.sh  worker.py
app/alembic/: env.py
app/alembic/versions/: 54824f17a11d_add_account_table.py  c43a1ddae8b7_add_job_and_artifact_tables.py
app/db/: base.py  dtos.py  models.py
app/shared/: celery.py  config.py  logger.py  settings.py
app/shared/db/: base.py  dtos.py  models.py  schemas.py
app/shared/db/alembic/: env.py
app/shared/db/alembic/versions/: 0eee2b7913b7_add_tables.py  426b6bdc3360_add_job_tables.py  684a5e546314_add_job_meta_field.py  bb249ed79907_add_job_tables.py  c43a1ddae8b7_add_job_and_artifact_tables.py  dc8582aea0bc_add_job_tables.py
app/tests/: conftest.py  test_api.py  test_auth.py
app/utils/: security.py
app/web/: __init__.py  dtos.py  main.py  security.py  start.sh  task_queue.py
app/web/injections/: db.py  security.py  settings.py  task_queue.py
app/worker/: main.py
app/worker/strategies/: base.py  local.py
conf/: rabbitmq.conf
docker/: app.dev.Dockerfile  dev.docker-compose.yml  worker.dev.Dockerfile
docker/dev/: docker-compose.yml  web.Dockerfile  worker.Dockerfile
docker/prod/: .env.example  docker-compose.yml  web.Dockerfile  worker.Dockerfile
scripts/: create_account.py  download_model.py  download_models.py
