[project]
name = "whisperbox-transcribe"
description = ""
version = "1.0.0"

dependencies=[
  "celery[redis] ==5.3.1",
  "sqlalchemy[mypy] ==2.0.19",
  "pydantic ==2.1.1",
  "pydantic-settings ==2.0.2"
]

[project.optional-dependencies]
web=[
  "alembic ==1.11.3",
  "fastapi ==0.101.1",
  "uvicorn[standard] ==0.23.2",
  "gunicorn ==21.2.0"
]

worker=[
  "watchdog[watchmedo] ==3.0.0",
  "openai-whisper ==20230314",
  "requests ==2.31.0"
]

tooling = [
  # code formatting
  "black ==23.7.0",
  # linting
  "ruff ==0.0.282",
  # tests
  "httpx ==0.24.1",
  "sqlalchemy-utils ==0.41.1",
  "python-dotenv ==1.0.0",
  "pytest ==7.4.0",
  # types
  "mypy ==1.4.1",
  "types-requests ==2.31.0.2"
]

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.setuptools]
py-modules = []
