[project]
name = "whisperbox-transcribe"
description = ""
version = "1.0.0"

dependencies=[
  "celery ==5.3.6",
  "sqlalchemy[mypy] ==2.0.20",
  "pydantic ==2.5.3",
  "pydantic-settings ==2.1.0"
]

[project.optional-dependencies]
web=[
  "alembic ==1.11.3",
  "fastapi ==0.101.1",
  "uvicorn[standard] ==0.23.2",
  "gunicorn ==21.2.0"
]

worker=[
  "watchdog[watchmedo] ==3.0.0",
  "openai-whisper ==20230314",
  "requests ==2.31.0"
]

tooling = [
  # code formatting
  "black ==23.12.1",
  # linting
  "ruff ==0.0.292",
  # tests
  "httpx ==0.26.0",
  "sqlalchemy-utils ==0.41.1",
  "python-dotenv ==1.0.0",
  "pytest ==7.4.4",
  # types
  "mypy ==1.5.1",
  "types-requests ==2.31.0.20231231"
]

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.setuptools]
py-modules = []
